--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,4 +30,13 @@
     <color name="Accent_S_100">#00FAD9</color>
     <color name="Accent_S_50">#7DFFEE</color>
 
+
+    <color name="black">#1A1B22</color>
+    <color name="white">#FDFDFD</color>
+    <color name="blue">#3772E7</color>
+    <color name="gray">#AEAFB4</color>
+    <color name="light_gray">#E6E8EB</color>
+    <color name="red">#F56B6C</color>
+    <!-- Тёмно-серый цвет с параметром alpha 50% -->
+    <color name="dark_gray">#1A1B2280</color>
 </resources>
