- Добавлен кастомный TabLayout с настройками для вкладок "Your subscriptions" и "Upcoming bills". - Реализован ViewPager2 для переключения между фрагментами вкладок. - Создан адаптер SubscriptionPagerAdapter для управления вкладками. - Добавлены ресурсы для кастомного отображения TabLayout, включая селекторы для цвета текста и фона. - Реализована логика привязки TabLayout и ViewPager через TabLayoutMediator. - Оптимизирована структура кода HomeFragment с использованием ViewBinding. - Добавлены заглушки для ViewPager с контентом вкладок YourSubscriptionsFragment и UpcomingBillsFragment.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -144,13 +144,17 @@
         android:id="@+id/tab_layout_subscription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
+        android:layout_marginVertical="16dp"
+        android:background="@drawable/tab_background"
         app:layout_constraintEnd_toEndOf="@+id/end_border"
         app:layout_constraintStart_toStartOf="@+id/start_border"
         app:layout_constraintTop_toBottomOf="@id/subscriptionsMetrics"
+        app:tabGravity="center"
         app:tabIndicatorColor="@color/White"
+        app:tabIndicatorHeight="0dp"
+        app:tabMode="fixed"
+        app:tabRippleColor="@null"
         app:tabTextAppearance="@style/CustomTabText"
-        app:tabTextColor="@color/White"
         tools:tabs="Your subscriptions, Upcoming bills" />
 
     <!-- ViewPager2 для отображения контента -->
