--- a/app/src/main/res/drawable/tab_selected_background.xml
+++ b/app/src/main/res/drawable/tab_selected_background.xml
@@ -1,4 +1,11 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/Gray_60" />
-    <corners android:radius="8dp" />
-</shape>
+<?xml version="1.0" encoding="utf-8" ?>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:bottom="1dp"
+        android:top="1dp">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/Gray_80" />
+            <corners android:radius="14dp" />
+        </shape>
+    </item>
+</layer-list>
