--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme for Dark mode -->
     <style name="Base.Theme.Subzy" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Цвет фона -->
-        <item name="colorPrimary">@color/Gray_70</item>
+        <item name="colorPrimary">@color/Gray_100</item>
 
         <!-- Текст основной -->
         <item name="colorOnPrimary">@color/white</item>
@@ -25,7 +25,7 @@
         <item name="colorAccent">@color/red</item>
 
         <!--позволяет динамически изменять фон окна приложения в соответствии с выбранной темой-->
-        <item name="android:windowBackground">@color/black</item>
+        <item name="android:windowBackground">@color/Gray_80</item>
     </style>
 
     <!-- Тема приложения -->
