- Добавлен MaterialCardView с закругленными нижними углами и отступами для главного экрана. - Реализованы карточки метрик подписок с цветной полоской сверху.. - Обновлена кнопка "See your budget", изменен размер и текст с отключением Caps. - Внесены стилистические правки для элементов: карточек, текста и полосок метрик. - Добавлены отступы и центрирование элементов внутри карточек.

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,14 +1,14 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <!-- Base application theme for Dark mode -->
     <style name="Base.Theme.Subzy" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Цвет фона -->
-        <item name="colorPrimary">@color/Gray_100</item>
+        <item name="colorPrimary">@color/Gray_56</item>
 
         <!-- Текст основной -->
         <item name="colorOnPrimary">@color/white</item>
 
-        <item name="colorSecondary">@color/gray</item>
+        <item name="colorSecondary">@color/white</item>
         <item name="colorSecondaryVariant">@color/light_gray</item>
 
         <!-- текст в edit text -->
@@ -18,7 +18,7 @@
         <item name="colorOnSecondaryFixed">@color/gray</item>
 
         <!-- кнопки -->
-         <item name="colorSurface">@color/Gray_60</item>
+        <item name="colorSurface">@color/Gray_60</item>
         <item name="colorOnSurface">@color/white</item>
 
         <!-- кнопки сброса и добавления в избранное -->
