--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,137 +6,294 @@
     android:layout_height="match_parent"
     tools:context=".presentation.ui.HomeFragment">
 
-
-    <!-- Круглый прогресс-бар -->
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="32dp"
-        android:indeterminate="false"
-        android:max="100"
-        android:progress="75"
-        android:progressDrawable="@drawable/circular_progress"
-        android:rotation="270"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <LinearLayout
-        android:id="@+id/appTitle"
-        android:layout_width="wrap_content"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/upcard"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:orientation="horizontal"
+        android:padding="16dp"
+        app:cardBackgroundColor="@color/Gray_75"
+        app:cardElevation="6dp"
+        app:layout_constraintBottom_toTopOf="@+id/tab_layout_subscription"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/progressBar">
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/CustomShapeUpCard">
 
-        <!-- Лого -->
-        <ImageView
-            android:id="@+id/appLogo"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:contentDescription="App Logo"
-            android:src="@drawable/app_logo_transparent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <!-- Название приложения -->
-        <TextView
-            android:id="@+id/appName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sybzy"
-            android:textColor="@color/White"
-            android:textSize="18sp" />
-    </LinearLayout>
+            <!-- Отcтупы -->
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/start_border_upcard"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="18dp" />
 
-    <!-- Текущая сумма -->
-    <TextView
-        android:id="@+id/currentAmount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="$1,235"
-        android:textColor="@color/White"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appTitle" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/end_border_upcard"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="18dp" />
+            <!-- Круглый прогресс-бар -->
 
-    <!-- Текст This month bills -->
-    <TextView
-        android:id="@+id/monthBills"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This month bills"
-        android:textColor="@color/Gray_30"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/currentAmount" />
+            <ImageButton
+                android:id="@+id/settings_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="settings"
+                android:padding="16dp"
+                android:src="@drawable/ic_settings"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/Gray_30" />
 
-    <!-- Кнопка "See your budget" -->
-    <Button
-        android:id="@+id/seeBudgetButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="@color/Gray_60"
-        android:text="See your budget"
-        android:textColor="@color/White"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/monthBills" />
+            <!-- Лого и название приложения -->
+            <LinearLayout
+                android:id="@+id/appTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-    <!-- Метрики подписок -->
-    <LinearLayout
-        android:id="@+id/subscriptionsMetrics"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/seeBudgetButton">
+                <!-- Лого -->
+                <ImageView
+                    android:id="@+id/appLogo"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:contentDescription="App Logo"
+                    android:src="@drawable/app_logo_transparent" />
 
-        <TextView
-            android:id="@+id/activeSubs"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Active subs\n12"
-            android:textAlignment="center"
-            android:textColor="@color/White" />
+                <!-- Название приложения -->
+                <TextView
+                    android:id="@+id/appName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:text="Sybzy"
+                    android:textColor="@color/White"
+                    android:textSize="18sp" />
+            </LinearLayout>
 
-        <View
-            android:layout_width="16dp"
-            android:layout_height="0dp" />
+            <!-- Текущая сумма -->
+            <TextView
+                android:id="@+id/currentAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="$1,235"
+                android:textColor="@color/White"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/appTitle" />
 
-        <TextView
-            android:id="@+id/highestSubs"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Highest subs\n$19.99"
-            android:textAlignment="center"
-            android:textColor="@color/White" />
+            <!-- Текст This month bills -->
+            <TextView
+                android:id="@+id/monthBills"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="This month bills"
+                android:textColor="@color/Gray_30"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/currentAmount" />
 
-        <View
-            android:layout_width="16dp"
-            android:layout_height="0dp" />
+            <!-- Кнопка See your budget -->
+            <Button
+                android:id="@+id/seeBudgetButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/shape_btn_see_budget"
+                android:minHeight="32dp"
+                android:text="See your budget"
+                android:textAllCaps="false"
+                android:textColor="@color/White"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/monthBills" />
 
-        <TextView
-            android:id="@+id/lowestSubs"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Lowest subs\n$5.99"
-            android:textAlignment="center"
-            android:textColor="@color/White" />
+            <!-- Метрики подписок -->
+            <LinearLayout
+                android:id="@+id/subscriptionsMetrics"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:weightSum="3"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/end_border_upcard"
+                app:layout_constraintStart_toEndOf="@id/start_border_upcard"
+                app:layout_constraintTop_toBottomOf="@id/seeBudgetButton">
 
-    </LinearLayout>
+                <!-- Карточка Active subs -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/activeSubsCard"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="8dp"
+                    app:cardBackgroundColor="@color/Gray_65"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="0dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <!-- Полоска сверху -->
+                        <View
+                            android:layout_width="46dp"
+                            android:layout_height="1dp"
+                            android:layout_gravity="center_horizontal"
+                            android:background="@color/Accent_P_50"
+                            android:elevation="4dp" />
+
+                        <TextView
+                            android:id="@+id/activeSubsTitle"
+                            style="@style/TextAppearance.Headline1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:paddingTop="14dp"
+                            android:text="Active subs"
+                            android:textColor="@color/Gray_40"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/activeSubsCount"
+                            style="@style/TextAppearance.Headline2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:paddingBottom="14dp"
+                            android:text="$12.99"
+                            android:textColor="@color/White"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <!-- Отступ -->
+                <View
+                    android:layout_width="16dp"
+                    android:layout_height="16dp" />
+
+                <!-- Карточка Highest subs -->
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:cardBackgroundColor="@color/Gray_65"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="0dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <!-- Полоска сверху -->
+                        <View
+                            android:layout_width="46dp"
+                            android:layout_height="1dp"
+                            android:layout_gravity="center_horizontal"
+                            android:background="@color/Primary_10"
+                            android:elevation="4dp" />
+
+                        <TextView
+                            android:id="@+id/highestSubsTitle"
+                            style="@style/TextAppearance.Headline1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:paddingTop="14dp"
+                            android:text="Highest subs"
+                            android:textColor="@color/Gray_40"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/highestSubsAmount"
+                            style="@style/TextAppearance.Headline2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:paddingBottom="14dp"
+                            android:text="$19.99"
+                            android:textColor="@color/White"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <!-- Отступ -->
+                <View
+                    android:layout_width="16dp"
+                    android:layout_height="16dp" />
+
+                <!-- Карточка Lowest subs -->
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:cardBackgroundColor="@color/Gray_65"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="0dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <!-- Полоска сверху -->
+                        <View
+                            android:layout_width="46dp"
+                            android:layout_height="1dp"
+                            android:layout_gravity="center_horizontal"
+                            android:background="@color/Accent_S_50"
+                            android:elevation="4dp" />
+
+                        <TextView
+                            android:id="@+id/lowestSubsTitle"
+                            style="@style/TextAppearance.Headline1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:paddingTop="14dp"
+                            android:text="Lowest subs"
+                            android:textColor="@color/Gray_40"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/lowestSubsAmount"
+                            style="@style/TextAppearance.Headline2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:paddingBottom="14dp"
+                            android:text="$5.99"
+                            android:textColor="@color/White"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
 
 
     <!-- TabLayout для переключения вкладок -->
@@ -144,11 +301,11 @@
         android:id="@+id/tab_layout_subscription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="16dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/tab_background"
         app:layout_constraintEnd_toEndOf="@+id/end_border"
         app:layout_constraintStart_toStartOf="@+id/start_border"
-        app:layout_constraintTop_toBottomOf="@id/subscriptionsMetrics"
+        app:layout_constraintTop_toBottomOf="@id/upcard"
         app:tabGravity="center"
         app:tabIndicatorColor="@color/White"
         app:tabIndicatorHeight="0dp"
@@ -162,6 +319,7 @@
         android:id="@+id/viewPager"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="4dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/end_border"
