--- a/app/src/main/res/layout/fragment_spend.xml
+++ b/app/src/main/res/layout/fragment_spend.xml
@@ -11,11 +11,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Spend Screen"
-        android:textColor="@color/Gray_70"
+        android:textColor="@color/Gray_30"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="visible" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
