--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -74,7 +74,7 @@
                 android:layout_width="300dp"
                 android:layout_height="300dp"
                 android:layout_marginTop="62dp"
-                android:elevation="0dp"
+                android:elevation="3dp"
                 app:layout_constraintBottom_toTopOf="@id/subscriptionsMetrics"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -89,16 +89,30 @@
                 android:layout_width="270dp"
                 android:layout_height="270dp"
                 android:layout_gravity="center"
+                android:elevation="4dp"
                 app:layout_constraintBottom_toBottomOf="@id/progress_view_background"
                 app:layout_constraintEnd_toEndOf="@id/progress_view_background"
                 app:layout_constraintStart_toStartOf="@id/progress_view_background"
                 app:layout_constraintTop_toTopOf="@id/progress_view_background"/>
+
+            <!-- Градиентная View на заднем плане -->
+            <View
+                android:id="@+id/gradient_background_view"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:background="@drawable/gradient_overlay_home_fragment"
+                android:elevation="2dp"
+                app:layout_constraintTop_toBottomOf="@+id/currentAmount"
+                app:layout_constraintBottom_toTopOf="@id/subscriptionsMetrics"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <com.anshok.subzy.util.extensions.DottedCircleView
                 android:id="@+id/dot_outside"
                 android:layout_width="350dp"
                 android:layout_height="350dp"
                 android:layout_gravity="center"
+                android:elevation="1dp"
                 app:layout_constraintBottom_toBottomOf="@id/progress_view_background"
                 app:layout_constraintEnd_toEndOf="@id/progress_view_background"
                 app:layout_constraintStart_toStartOf="@id/progress_view_background"
@@ -109,6 +123,7 @@
                 android:layout_width="400dp"
                 android:layout_height="400dp"
                 android:layout_gravity="center"
+                android:elevation="1dp"
                 app:layout_constraintBottom_toBottomOf="@id/progress_view_background"
                 app:layout_constraintEnd_toEndOf="@id/progress_view_background"
                 app:layout_constraintStart_toStartOf="@id/progress_view_background"
@@ -171,6 +186,7 @@
                 android:layout_marginTop="16dp"
                 android:text="This month bills"
                 android:textColor="@color/Gray_30"
+                android:elevation="1dp"
                 app:layout_constraintEnd_toEndOf="@+id/end_border_upcard"
                 app:layout_constraintStart_toStartOf="@+id/start_border_upcard"
                 app:layout_constraintTop_toBottomOf="@+id/currentAmount" />
@@ -201,6 +217,7 @@
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:weightSum="3"
+                android:elevation="2dp"
                 app:layout_constraintTop_toBottomOf="@id/seeBudgetButton"
                 app:layout_constraintEnd_toStartOf="@id/end_border_upcard"
                 app:layout_constraintStart_toEndOf="@id/start_border_upcard"
