--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
 
     <color name="Gray_75">#282832</color>
     <color name="Gray_65">#30303c</color>
+    <color name="Gray_62">#3F3F4F</color>
     <color name="Gray_55">#414152</color>
     <color name="Gray_56">#3d3d47</color>
 
